# mbot_object_localization

./: CMakeLists.txt  README.md  package.xml
ros/config/: params.yaml
ros/include/mbot_object_localization_ros/: object_localization.h
ros/launch/: mbot_object_localization.launch
ros/scripts/: mbot_object_localization_node
ros/src/: object_localization.cpp  object_localization_node.cpp
