<?xml version="1.0"?>
<package>
    <name>mbot_object_localization</name>
    <version>1.0.0</version>
    <description>
    Localises objects from detected objects and depth maps.
    </description>

    <license>BSD</license>

    <author email="tiagojdias@tecnico.ulisboa.pt">Tiago Dias</author>
    <author email="enrico.piazza@polimi.it">Enrico Piazza</author>
    <author email="guilherme.lawless@tecnico.ulisboa.pt">Guilherme Lawless</author>
    <maintainer email="enrico.piazza@polimi.it">Enrico Piazza</maintainer>

    <build_depend>roscpp</build_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>image_geometry</build_depend>
    <build_depend>darknet_ros_py</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>mbot_perception_msgs</build_depend>
    <build_depend>image_geometry</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>darknet_ros_py</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>image_geometry</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_filters</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>mbot_perception_msgs</run_depend>
    <run_depend>image_geometry</run_depend>

</package>
